--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/miaosha
 #ÕûºÏRedis
 spring.redis.host=192.168.91.3
 spring.redis.port=6379
-spring.redis.password=123456
+spring.redis.password=
 spring.redis.timeout=3000ms
 
 
